--- a/register.html
+++ b/register.html
@@ -126,12 +126,13 @@
       </a>
     </div>
 
-    <!-- 💬 Коментар до оплати -->
-<div class="field">
-  <label for="payment_comment">Коментар до оплати *</label>
-  <textarea id="payment_comment" name="payment_comment" rows="2"
-    placeholder="Вкажіть назву команди, від імені якої здійснено оплату"></textarea>
-  <small class="hint">Наприклад: DK Два Кума</small>
+    <!-- 💡 Підказка для оплати -->
+<div class="notice" id="payNote" style="margin-top:10px">
+  💡 <b>Важливо!</b> Під час оплати у вашому банку в полі
+  <i>«Призначення платежу / Коментар»</i> впишіть назву команди.
+  <br>
+  Приклад: <span class="code" id="payComment">Оплата внеску — [назва команди]</span>
+  <button type="button" class="btn btn--ghost" id="copyPayComment" style="margin-left:8px">Скопіювати</button>
 </div>
 
     <div class="qr-block">
