--- a/register.html
+++ b/register.html
@@ -125,15 +125,9 @@
         💚 Оплатити 1500 ₴ (Приват24)
       </a>
     </div>
-
-    <!-- 💡 Підказка для оплати -->
-<div class="notice" id="payNote" style="margin-top:10px">
-  💡 <b>Важливо!</b> Під час оплати у вашому банку в полі
-  <i>«Призначення платежу / Коментар»</i> впишіть назву команди.
-  <br>
-  Приклад: <span class="code" id="payComment">Оплата внеску — [назва команди]</span>
-  <button type="button" class="btn btn--ghost" id="copyPayComment" style="margin-left:8px">Скопіювати</button>
-</div>
+<p style="margin:10px 0;color:#ffcc00;text-align:center;">
+  💡 Під час оплати впишіть <b>назву команди</b> у коментар.
+</p>
 
     <div class="qr-block">
       <img
