--- a/register.html
+++ b/register.html
@@ -1,17 +1,19 @@
 <!doctype html>
 <html lang="uk">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Реєстрація — STOLAR CARP</title>
-  <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="assets/js/config.js"></script>
 </head>
 
 <body class="register-page">
 <header class="header">
   <div class="container header__row">
-    <a class="logo" href="index.html"><span class="logo__mark">SC</span><span class="logo__text">STOLAR CARP</span></a>
+    <a class="logo" href="index.html">
+      <span class="logo__mark">SC</span><span class="logo__text">STOLAR CARP</span>
+    </a>
     <nav class="nav" id="nav">
       <a href="index.html" class="nav__link">Головна</a>
       <a href="rules.html" class="nav__link">Регламент</a>
@@ -32,63 +34,58 @@
     <p class="lead">Заповніть форму нижче для участі у змаганнях.</p>
 
     <form id="regForm" class="form-card" novalidate>
-      <!-- антиспам -->
-      <input type="text" name="hp" autocomplete="off" style="position:absolute;left:-9999px;opacity:0" />
-      <input type="hidden" name="fp" id="fp" />
+      <input type="text" name="hp" autocomplete="off" style="position:absolute;left:-9999px;opacity:0">
+      <input type="hidden" name="fp" id="fp">
 
       <div class="field">
         <label for="team_name">Назва команди *</label>
-        <input id="team_name" name="team_name" type="text" required minlength="2" maxlength="60" placeholder="DK Два Кума" />
+        <input id="team_name" name="team_name" type="text" required minlength="2" maxlength="60" placeholder="DK Два Кума">
       </div>
 
       <div class="field">
         <label for="members_count">Кількість учасників *</label>
-        <input id="members_count" name="members_count" type="number" required min="1" max="4" inputmode="numeric" placeholder="1–4" />
+        <input id="members_count" name="members_count" type="number" required min="1" max="4" inputmode="numeric" placeholder="1–4">
       </div>
 
       <div class="field">
         <label for="captain">Капітан команди *</label>
-        <input id="captain" name="captain" type="text" required minlength="2" maxlength="60" placeholder="Ім’я та прізвище" />
+        <input id="captain" name="captain" type="text" required minlength="2" maxlength="60" placeholder="Ім’я та прізвище">
       </div>
 
       <div class="field">
         <label for="phone_rest">Номер телефону *</label>
         <div class="phone-wrap">
           <span class="phone-prefix">+380</span>
-          <input id="phone_rest" type="text" inputmode="numeric" pattern="\d{9}" maxlength="9" required placeholder="XXXXXXXXX" aria-label="9 цифр після +380" />
+          <input id="phone_rest" type="text" inputmode="numeric" pattern="\d{9}" maxlength="9" required placeholder="XXXXXXXXX" aria-label="9 цифр після +380">
         </div>
-        <input type="hidden" id="phone" name="phone" />
+        <input type="hidden" id="phone" name="phone">
         <small class="hint">Введіть 9 цифр після +380 (разом буде +380XXXXXXXXX)</small>
       </div>
 
       <fieldset class="field">
         <legend>Харчування *</legend>
-        <label class="radio"><input type="radio" name="food" value="Ні" required /> Ні</label>
-        <label class="radio"><input type="radio" name="food" value="Так" required /> Так</label>
+        <label class="radio"><input type="radio" name="food" value="Ні" required> Ні</label>
+        <label class="radio"><input type="radio" name="food" value="Так" required> Так</label>
       </fieldset>
 
       <div class="field" id="foodQtyField">
         <label for="food_qty">Кількість порцій</label>
-        <input id="food_qty" name="food_qty" type="number" min="1" max="20" inputmode="numeric" placeholder="скільки порцій?" />
+        <input id="food_qty" name="food_qty" type="number" min="1" max="20" inputmode="numeric" placeholder="скільки порцій?">
       </div>
-      
+
+      <p style="margin:10px 0;color:#ffcc00;text-align:center;">
+        💡 Під час оплати впишіть <b>назву команди</b> у коментар.
+      </p>
 
       <div class="field checkbox">
-        <label><input id="agree" name="agree" type="checkbox" required /> Погоджуюсь з <a href="rules.html" target="_blank" rel="noopener">регламентом</a> *</label>
-      </div>
-
-      <!-- PAYWALL -->
-      <div class="paywall" id="paywall">
-        <p id="payStatus" class="hint">Щоб зареєструватись, спочатку оплатіть внесок.</p>
-        <div class="paywall__buttons">
-          <button id="payButton" class="btn btn--primary" type="button">Оплатити внесок</button>
-          <button id="iPaid" class="btn btn--ghost" type="button">Я оплатив(ла)</button>
-          <button id="checkPayment" class="btn btn--ghost" type="button">Перевірити оплату</button>
-        </div>
+        <label><input id="agree" name="agree" type="checkbox" required> Погоджуюсь з <a href="rules.html" target="_blank" rel="noopener">регламентом</a> *</label>
       </div>
 
       <div class="form-actions">
-        <button id="submitBtn" type="submit" class="btn btn--primary">Надіслати заявку</button>
+        <a href="https://send.monobank.ua/jar/7U9RD9ypvQ"
+           target="_blank" rel="noopener noreferrer"
+           class="btn btn--primary">💳 Оплатити внесок 1500 ₴</a>
+        <button id="submitBtn" type="submit" class="btn btn--ghost">Надіслати заявку</button>
         <span id="spinner" class="spinner" aria-hidden="true"></span>
       </div>
 
@@ -101,74 +98,43 @@
   <div class="container footer__row">
     <div>© 2025 STOLAR CARP · Львів</div>
     <div class="footer__links">
-      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh" rel="noopener">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp" rel="noopener">YouTube</a>
+      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
+      <a href="https://youtube.com/@dk-stolarcarp">YouTube</a>
     </div>
   </div>
 </footer>
 
-<!-- 💳 POPUP ОПЛАТИ -->
-<div id="paymentModal" class="modal" aria-hidden="true" role="dialog" aria-modal="true">
-  <div class="modal-content">
-    <button type="button" class="close" aria-label="Закрити">&times;</button>
-    <h2>💳 Оплата реєстраційного внеску</h2>
-    <p>Частина внеску: <strong>1500 ₴</strong></p>
-    <p>Кошти надходять організаторам <strong>Осінній короп</strong><br />Решта оплачується під час жеребкування.</p>
-
-    <div class="buttons">
-      <a href="https://send.monobank.ua/7U9RD9ypvQ?amount=1500"
-         target="_blank" rel="noopener noreferrer" class="mono">
-        💜 Оплатити 1500 ₴ (Monobank)
-      </a>
-      <a href="https://next.privat24.ua/money-transfer/card?amount=1500&receiver=4874070050688793"
-         target="_blank" rel="noopener noreferrer" class="privat">
-        💚 Оплатити 1500 ₴ (Приват24)
-      </a>
-    </div>
-<p style="margin:10px 0;color:#ffcc00;text-align:center;">
-  💡 Під час оплати впишіть <b>назву команди</b> у коментар.
-</p>
-
-    <div class="qr-block">
-      <img
-        src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=https%3A%2F%2Fsend.monobank.ua%2F7U9RD9ypvQ%3Famount%3D1500"
-        width="180" height="180" alt="QR Monobank (1500 ₴)" />
-      <p class="qr-text">Скануй для оплати 1500 ₴ через Monobank</p>
-    </div>
-  </div>
-</div>
-
-<!-- СТИЛІ МОДАЛКИ -->
-<style>
-.modal{display:none;position:fixed;inset:0;z-index:9999;background:rgba(0,0,0,.75);justify-content:center;align-items:center;}
-.modal.open{display:flex;}body.modal-open{overflow:hidden;}
-.modal-content{position:relative;background:#111;border:2px solid #ffcc00;color:#fff;padding:28px 25px 35px;border-radius:18px;max-width:400px;width:90%;text-align:center;box-shadow:0 0 25px rgba(255,204,0,.3);}
-.modal-content h2{margin:0 0 10px;color:#ffcc00;text-transform:uppercase;font-size:1.2rem;}
-.buttons a{display:block;margin:12px 0;padding:14px;border-radius:12px;font-weight:600;text-decoration:none;color:#fff;transition:transform .2s, box-shadow .2s;}
-.buttons .mono{background:linear-gradient(90deg,#6f42c1,#9b59b6);box-shadow:0 0 10px rgba(155,89,182,.5);}
-.buttons .mono:hover{transform:scale(1.03);box-shadow:0 0 18px rgba(155,89,182,.8);}
-.buttons .privat{background:linear-gradient(90deg,#1aa64c,#28d16d);box-shadow:0 0 10px rgba(40,209,109,.5);}
-.buttons .privat:hover{transform:scale(1.03);box-shadow:0 0 18px rgba(40,209,109,.8);}
-.qr-block{margin-top:18px;}
-.qr-block img{border:2px solid #ffcc00;border-radius:10px;box-shadow:0 0 10px rgba(255,204,0,.4);}
-.qr-text{font-size:.9rem;color:#ccc;margin-top:8px;}
-.close{position:absolute;top:10px;right:18px;font-size:28px;line-height:1;cursor:pointer;color:#aaa;background:none;border:none;}
-.close:hover{color:#fff;}
-</style>
-
-<!-- ЛОГІКА МОДАЛКИ -->
 <script>
-const modal=document.getElementById('paymentModal');
-const openBtn=document.getElementById('payButton');
-const closeBtn=modal.querySelector('.close');
-function openModal(){modal.classList.add('open');document.body.classList.add('modal-open');modal.setAttribute('aria-hidden','false');}
-function closeModal(){modal.classList.remove('open');document.body.classList.remove('modal-open');modal.setAttribute('aria-hidden','true');}
-openBtn.addEventListener('click',openModal);
-closeBtn.addEventListener('click',closeModal);
-modal.addEventListener('click',(e)=>{if(e.target===modal)closeModal();});
-document.addEventListener('keydown',(e)=>{if(e.key==='Escape'&&modal.classList.contains('open'))closeModal();});
-</script>
+  // Легка логіка для показу/приховування кількості порцій
+  const form = document.getElementById('regForm');
+  const radios = form.querySelectorAll('input[name="food"]');
+  const qty = document.getElementById('food_qty');
+  const field = document.getElementById('foodQtyField');
+  function toggleFood() {
+    const need = form.food.value === 'Так';
+    qty.disabled = !need;
+    qty.required = need;
+    field.classList.toggle('field--disabled', !need);
+  }
+  radios.forEach(r => r.addEventListener('change', toggleFood));
+  toggleFood();
 
-<script src="assets/js/payments.js"></script>
+  // Маска телефону
+  const phoneInput = document.getElementById('phone_rest');
+  const phoneHidden = document.getElementById('phone');
+  phoneInput.addEventListener('input', ()=>{
+    const clean = phoneInput.value.replace(/\D/g,'').slice(0,9);
+    phoneInput.value = clean;
+    phoneHidden.value = '+380' + clean;
+  });
+
+  // Імітація відправки (без бекенду)
+  form.addEventListener('submit', e=>{
+    e.preventDefault();
+    alert('✅ Заявку збережено! Не забудьте оплатити внесок 1500 ₴.');
+    form.reset();
+    toggleFood();
+  });
+</script>
 </body>
 </html>
