--- a/events/osinniy-korop-2025.html
+++ b/events/osinniy-korop-2025.html
@@ -78,7 +78,7 @@
 
 <footer class="footer">
   <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львівщина</div>
+    <div>© 2025 STOLAR CARP · Львів</div>
     <div class="footer__links">
       <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
       <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
